--- a/client/src/index.html
+++ b/client/src/index.html
@@ -22,6 +22,7 @@
     <meta name="theme-color">
 
     <link rel="manifest" href="manifest.webmanifest">
+    <script src="assets/environment/env.js" defer></script>
 </head>
 
 <body>
