--- a/client/src/index.html
+++ b/client/src/index.html
@@ -26,7 +26,7 @@
     <link rel="manifest" href="manifest.webmanifest">
     <script src="assets/environment/env.js" defer></script>
     <style>
-        body {
+        body.sign-in-screen {
             min-height: calc(100% + env(safe-area-inset-top));
             padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
         }
