--- a/website/index.html
+++ b/website/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html class="no-js" lang="zxx">
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Appvilla - Creative Landing Page HTML Template.</title>
+    <title>RYPM. - Only workout companion you will ever need.</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.svg" />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
 
-    <!-- ========================= CSS here ========================= -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/LineIcons.2.0.css" />
     <link rel="stylesheet" href="assets/css/animate.css" />
@@ -48,7 +47,7 @@
                         <!-- Start Navbar -->
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="index.html">
-                                <img src="assets/images/logo/white-logo.svg" alt="Logo">
+                                <img src="assets/images/logo/logo-light.png" alt="Logo">
                             </a>
                             <button class="navbar-toggler mobile-menu-btn" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -95,7 +94,8 @@
                                 </ul>
                             </div> <!-- navbar collapse -->
                             <div class="button add-list-button">
-                                <a href="javascript:void(0)" class="btn">Get it now</a>
+                                <a href="https://app.rypm.app" class="btn">Login</a>
+                                <a href="https://app.rypm.app/register" class="btn">Register</a>
                             </div>
                         </nav>
                         <!-- End Navbar -->
@@ -112,13 +112,10 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 col-md-12 col-12">
                     <div class="hero-content">
-                        <h1 class="wow fadeInLeft" data-wow-delay=".4s">A powerful app for your business.</h1>
-                        <p class="wow fadeInLeft" data-wow-delay=".6s">From open source to pro services, Piqes helps you
-                            to build, deploy, test, and monitor apps.</p>
+                        <h1 class="wow fadeInLeft" data-wow-delay=".4s">Your ultimate workout companion.</h1>
+                        <p class="wow fadeInLeft" data-wow-delay=".6s">Track, analyze, and improve every workout.</p>
                         <div class="button wow fadeInLeft" data-wow-delay=".8s">
-                            <a href="javascript:void(0)" class="btn"><i class="lni lni-apple"></i> App Store</a>
-                            <a href="javascript:void(0)" class="btn btn-alt"><i class="lni lni-play-store"></i> Google
-                                Play</a>
+                            <a href="https://demo.rypm.app" class="btn btn-alt">Try Demo</a>
                         </div>
                     </div>
                 </div>
@@ -132,14 +129,56 @@
     </section>
     <!-- End Hero Area -->
 
-    <!-- Start Features Area -->
     <section id="features" class="features section">
         <div class="container">
             <div class="row">
                 <div class="col-12">
                     <div class="section-title">
                         <h3 class="wow zoomIn" data-wow-delay=".2s">Features</h3>
-                        <h2 class="wow fadeInUp" data-wow-delay=".4s">Your Experience Gets Better And Better Over Time.
+                        <h2 class="wow fadeInUp" data-wow-delay=".4s">For Trainers
+                        </h2>
+                        <p class="wow fadeInUp" data-wow-delay=".6s">There are many variations of passages of Lorem
+                            Ipsum available, but the majority have suffered alteration in some form.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+ 
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="single-feature wow fadeInUp" data-wow-delay=".2s">
+                        <i class="lni lni-shield"></i>
+                        <h3>Advanced Security</h3>
+                        <p>It is a long established fact that a reader will be distracted by the readable content of a
+                            page at its layout.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="single-feature wow fadeInUp" data-wow-delay=".4s">
+                        <i class="lni lni-cog"></i>
+                        <h3>Powerful API</h3>
+                        <p>It is a long established fact that a reader will be distracted by the readable content of a
+                            page at its layout.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="single-feature wow fadeInUp" data-wow-delay=".6s">
+                        <i class="lni lni-layers"></i>
+                        <h3>Database Backups</h3>
+                        <p>It is a long established fact that a reader will be distracted by the readable content of a
+                            page at its layout.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+        <section id="features" class="features section">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="section-title">
+                        <h3 class="wow zoomIn" data-wow-delay=".2s">Features</h3>
+                        <h2 class="wow fadeInUp" data-wow-delay=".4s">For Trainees
                         </h2>
                         <p class="wow fadeInUp" data-wow-delay=".6s">There are many variations of passages of Lorem
                             Ipsum available, but the majority have suffered alteration in some form.</p>
@@ -148,72 +187,34 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-12">
-                    <!-- Start Single Feature -->
                     <div class="single-feature wow fadeInUp" data-wow-delay=".2s">
                         <i class="lni lni-cloud-upload"></i>
                         <h3>Push to Deploy</h3>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
                             page at its layout.</p>
                     </div>
-                    <!-- End Single Feature -->
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <!-- Start Single Feature -->
                     <div class="single-feature wow fadeInUp" data-wow-delay=".4s">
                         <i class="lni lni-lock"></i>
                         <h3>SSL Certificates</h3>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
                             page at its layout.</p>
                     </div>
-                    <!-- End Single Feature -->
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <!-- Start Single Feature -->
                     <div class="single-feature wow fadeInUp" data-wow-delay=".6s">
                         <i class="lni lni-reload"></i>
                         <h3>Simple Queues</h3>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
                             page at its layout.</p>
                     </div>
-                    <!-- End Single Feature -->
-                </div>
-                <div class="col-lg-4 col-md-6 col-12">
-                    <!-- Start Single Feature -->
-                    <div class="single-feature wow fadeInUp" data-wow-delay=".2s">
-                        <i class="lni lni-shield"></i>
-                        <h3>Advanced Security</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                            page at its layout.</p>
-                    </div>
-                    <!-- End Single Feature -->
-                </div>
-                <div class="col-lg-4 col-md-6 col-12">
-                    <!-- Start Single Feature -->
-                    <div class="single-feature wow fadeInUp" data-wow-delay=".4s">
-                        <i class="lni lni-cog"></i>
-                        <h3>Powerful API</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                            page at its layout.</p>
-                    </div>
-                    <!-- End Single Feature -->
-                </div>
-                <div class="col-lg-4 col-md-6 col-12">
-                    <!-- Start Single Feature -->
-                    <div class="single-feature wow fadeInUp" data-wow-delay=".6s">
-                        <i class="lni lni-layers"></i>
-                        <h3>Database Backups</h3>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a
-                            page at its layout.</p>
-                    </div>
-                    <!-- End Single Feature -->
                 </div>
             </div>
         </div>
     </section>
-    <!-- End Features Area -->
 
-    <!-- Start Achievement Area -->
-    <section class="our-achievement section">
+    <!-- <section class="our-achievement section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 offset-lg-1 col-md-12 col-12">
@@ -248,11 +249,9 @@
                 </div>
             </div>
         </div>
-    </section>
-    <!-- End Achievement Area -->
+    </section> -->
 
-    <!-- Start Pricing Table Area -->
-    <section id="pricing" class="pricing-table section">
+    <!-- <section id="pricing" class="pricing-table section">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -266,9 +265,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Single Table -->
                     <div class="single-table wow fadeInUp" data-wow-delay=".2s">
-                        <!-- Table Head -->
                         <div class="table-head">
                             <h4 class="title">Hobby</h4>
                             <p>All the basics for starting a new business</p>
@@ -279,27 +276,19 @@
                                 <a href="javascript:void(0)" class="btn">Buy Hobby</a>
                             </div>
                         </div>
-                        <!-- End Table Head -->
-                        <!-- Start Table Content -->
                         <div class="table-content">
                             <h4 class="middle-title">What's Included</h4>
-                            <!-- Table List -->
                             <ul class="table-list">
                                 <li><i class="lni lni-checkmark-circle"></i> Cras justo odio.</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Dapibus ac facilisis in.</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Morbi leo risus.</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Potenti felis, in cras ligula.</li>
                             </ul>
-                            <!-- End Table List -->
                         </div>
-                        <!-- End Table Content -->
                     </div>
-                    <!-- End Single Table-->
                 </div>
                 <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Single Table -->
                     <div class="single-table wow fadeInUp" data-wow-delay=".4s">
-                        <!-- Table Head -->
                         <div class="table-head">
                             <h4 class="title">Freelancer</h4>
                             <p>All the basics for starting a new business</p>
@@ -310,27 +299,19 @@
                                 <a href="javascript:void(0)" class="btn">Buy Freelancer</a>
                             </div>
                         </div>
-                        <!-- End Table Head -->
-                        <!-- Start Table Content -->
                         <div class="table-content">
                             <h4 class="middle-title">What's Included</h4>
-                            <!-- Table List -->
                             <ul class="table-list">
                                 <li><i class="lni lni-checkmark-circle"></i> Cras justo odio.</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Dapibus ac facilisis in.</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Morbi leo risus.</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Potenti felis, in cras ligula.</li>
                             </ul>
-                            <!-- End Table List -->
                         </div>
-                        <!-- End Table Content -->
                     </div>
-                    <!-- End Single Table-->
                 </div>
                 <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Single Table -->
                     <div class="single-table wow fadeInUp" data-wow-delay=".6s">
-                        <!-- Table Head -->
                         <div class="table-head">
                             <h4 class="title">Startup</h4>
                             <p>All the basics for starting a new business</p>
@@ -341,27 +322,19 @@
                                 <a href="javascript:void(0)" class="btn">Buy Startup</a>
                             </div>
                         </div>
-                        <!-- End Table Head -->
-                        <!-- Start Table Content -->
                         <div class="table-content">
                             <h4 class="middle-title">What's Included</h4>
-                            <!-- Table List -->
                             <ul class="table-list">
                                 <li><i class="lni lni-checkmark-circle"></i> Cras justo odio.</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Dapibus ac facilisis in.</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Morbi leo risus.</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Potenti felis, in cras ligula.</li>
                             </ul>
-                            <!-- End Table List -->
                         </div>
-                        <!-- End Table Content -->
                     </div>
-                    <!-- End Single Table-->
                 </div>
                 <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Single Table -->
                     <div class="single-table wow fadeInUp" data-wow-delay=".8s">
-                        <!-- Table Head -->
                         <div class="table-head">
                             <h4 class="title">Enterprise</h4>
                             <p>All the basics for starting a new business</p>
@@ -372,27 +345,20 @@
                                 <a href="javascript:void(0)" class="btn">Buy Enterprise</a>
                             </div>
                         </div>
-                        <!-- End Table Head -->
-                        <!-- Start Table Content -->
                         <div class="table-content">
                             <h4 class="middle-title">What's Included</h4>
-                            <!-- Table List -->
                             <ul class="table-list">
                                 <li><i class="lni lni-checkmark-circle"></i> Cras justo odio.</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Dapibus ac facilisis in.</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Morbi leo risus.</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Potenti felis, in cras ligula.</li>
                             </ul>
-                            <!-- End Table List -->
                         </div>
-                        <!-- End Table Content -->
                     </div>
-                    <!-- End Single Table-->
                 </div>
             </div>
         </div>
-    </section>
-    <!--/ End Pricing Table Area -->
+    </section> -->
 
     <!-- Start Call To Action Area -->
     <section class="section call-action">
@@ -405,7 +371,7 @@
                         <p class="wow fadeInUp" data-wow-delay=".4s">Please, purchase full version of the template to
                             get all pages, features and commercial license.</p>
                         <div class="button wow fadeInUp" data-wow-delay=".6s">
-                            <a href="javascript:void(0)" class="btn">Purchase Now</a>
+                            <a href="javascript:void(0)" class="btn">Try Demo</a>
                         </div>
                     </div>
                 </div>
@@ -425,7 +391,7 @@
                         <div class="single-footer f-about">
                             <div class="logo">
                                 <a href="index.html">
-                                    <img src="assets/images/logo/white-logo.svg" alt="#">
+                                    <img src="assets/images/logo/logo-light.png" alt="#">
                                 </a>
                             </div>
                             <p>Making the world a better place through constructing elegant hierarchies.</p>
@@ -437,8 +403,8 @@
                                 <li><a href="javascript:void(0)"><i class="lni lni-youtube"></i></a></li>
                                 <li><a href="javascript:void(0)"><i class="lni lni-pinterest"></i></a></li>
                             </ul>
-                            <p class="copyright-text">Designed and Developed by <a href="https://uideck.com/"
-                                    rel="nofollow" target="_blank">UIdeck</a>
+                            <p class="copyright-text">Developed by <a href="https://bytewise.hr/"
+                                    rel="nofollow" target="_blank">BYTEWISE</a>
                             </p>
                         </div>
                         <!-- End Single Widget -->
